fixed margins on wrapper to be more responsive on mobile

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -73,10 +73,10 @@
 
 #notice_wrapper {
   margin-top: -251px;
-  margin-left: 42%;
+  margin-left: 37%;
   top: 0;
   height: 146px;
-  width: 17%;
+  width: 29%;
   z-index: 10000;
   box-shadow: 0 0 4px rgba(0,0,0,0.2);
   background-color: rgba(255,255,255,0.98);
